idea/testData/multiplatform/hierarcicalActualization/common/common.kt
package foo

expect class ExpectInCommonActualInMiddle
expect class ExpectInCommonActualInPlatforms

expect class <!NO_ACTUAL_FOR_EXPECT, NO_ACTUAL_FOR_EXPECT!>ExpectInCommonWithoutActual<!>
